# serializer version: 1
# name: test_reduntant_split_duplicate
  <ExceptionInfo AssertionError("Found reduntant split nodes: {FilterNode(args=(), kwargs=(('outputs', 2),), inputs=(VideoStream(node=F...t_typings=(<StreamType.video: 'video'>,), output_typings=(<StreamType.video: 'video'>, <StreamType.video: 'video'>))}") tblen=2>
# ---
# name: test_reduntant_split_outputs_1
  <ExceptionInfo AssertionError("Found reduntant split nodes: {FilterNode(args=(), kwargs=(('outputs', 1),), inputs=(AVStream(node=Inpu...=None),), name='split', input_typings=(<StreamType.video: 'video'>,), output_typings=(<StreamType.video: 'video'>,))}") tblen=2>
# ---
# name: test_validate_not_utilize_split
  <ExceptionInfo AssertionError("Found not utilized split nodes: [FilterNode(args=(), kwargs=(('outputs', 2),), inputs=(AVStream(node=I...t_typings=(<StreamType.video: 'video'>,), output_typings=(<StreamType.video: 'video'>, <StreamType.video: 'video'>))]") tblen=2>
# ---
# name: test_validate_reuse_stream
  <ExceptionInfo AssertionError("Found reuse streams: [VideoStream(node=FilterNode(args=(), kwargs=(), inputs=(VideoStream(node=FilterN...nput_typings=(<StreamType.video: 'video'>,), output_typings=(<StreamType.video: 'video'>,)), selector=None, index=0)]") tblen=2>
# ---
